data/typestate_checker_output_cog_dataset_9.txt
dataset9/src/main/java/CodeSnippets.java:1: error: package hirondelle.web4j.util does not exist
import hirondelle.web4j.util.Util;
                            ^
dataset9/src/main/java/CodeSnippets.java:2: error: package hirondelle.web4j.webmaster does not exist
import hirondelle.web4j.webmaster.TroubleTicket;
                                 ^
dataset9/src/main/java/CodeSnippets.java:16: error: package javax.servlet does not exist
import javax.servlet.AsyncContext;
                    ^
dataset9/src/main/java/CodeSnippets.java:17: error: package javax.servlet does not exist
import javax.servlet.DispatcherType;
                    ^
dataset9/src/main/java/CodeSnippets.java:18: error: package javax.servlet does not exist
import javax.servlet.RequestDispatcher;
                    ^
dataset9/src/main/java/CodeSnippets.java:19: error: package javax.servlet does not exist
import javax.servlet.ServletContext;
                    ^
dataset9/src/main/java/CodeSnippets.java:20: error: package javax.servlet does not exist
import javax.servlet.ServletException;
                    ^
dataset9/src/main/java/CodeSnippets.java:21: error: package javax.servlet does not exist
import javax.servlet.ServletInputStream;
                    ^
dataset9/src/main/java/CodeSnippets.java:22: error: package javax.servlet does not exist
import javax.servlet.ServletRequest;
                    ^
dataset9/src/main/java/CodeSnippets.java:23: error: package javax.servlet does not exist
import javax.servlet.ServletResponse;
                    ^
dataset9/src/main/java/CodeSnippets.java:24: error: package javax.servlet.http does not exist
import javax.servlet.http.Cookie;
                         ^
dataset9/src/main/java/CodeSnippets.java:25: error: package javax.servlet.http does not exist
import javax.servlet.http.HttpServletRequest;
                         ^
dataset9/src/main/java/CodeSnippets.java:26: error: package javax.servlet.http does not exist
import javax.servlet.http.HttpServletResponse;
                         ^
dataset9/src/main/java/CodeSnippets.java:27: error: package javax.servlet.http does not exist
import javax.servlet.http.HttpSession;
                         ^
dataset9/src/main/java/CodeSnippets.java:28: error: package javax.servlet.http does not exist
import javax.servlet.http.HttpUpgradeHandler;
                         ^
dataset9/src/main/java/CodeSnippets.java:29: error: package javax.servlet.http does not exist
import javax.servlet.http.Part;
                         ^
dataset9/src/main/java/CodeSnippets.java:435: error: cannot find symbol
    public void logAndEmailSeriousProblemS111(Throwable ex, HttpServletRequest aRequest)
                                                            ^
  symbol:   class HttpServletRequest
  location: class CodeSnippets
dataset9/src/main/java/CodeSnippets.java:457: error: cannot find symbol
    public void logAndEmailSeriousProblemS112(Throwable ex, HttpServletRequest aRequest)
                                                            ^
  symbol:   class HttpServletRequest
  location: class CodeSnippets
dataset9/src/main/java/CodeSnippets.java:478: error: cannot find symbol
    public void logAndEmailSeriousProblemS113(Throwable ex, HttpServletRequest aRequest)
                                                            ^
  symbol:   class HttpServletRequest
  location: class CodeSnippets
dataset9/src/main/java/CodeSnippets.java:496: error: cannot find symbol
    public void logAndEmailSeriousProblemS121(Throwable ex, HttpServletRequest aRequest)
                                                            ^
  symbol:   class HttpServletRequest
  location: class CodeSnippets
dataset9/src/main/java/CodeSnippets.java:519: error: cannot find symbol
    public void logAndEmailSeriousProblemS122(Throwable ex, HttpServletRequest aRequest)
                                                            ^
  symbol:   class HttpServletRequest
  location: class CodeSnippets
dataset9/src/main/java/CodeSnippets.java:542: error: cannot find symbol
    public void logAndEmailSeriousProblemS123(Throwable ex, HttpServletRequest aRequest)
                                                            ^
  symbol:   class HttpServletRequest
  location: class CodeSnippets
dataset9/src/main/java/CodeSnippets.java:35: error: cannot find symbol
        HttpServletRequest h = new HttpServletRequest() {
        ^
  symbol:   class HttpServletRequest
  location: class CodeSnippets
dataset9/src/main/java/CodeSnippets.java:35: error: cannot find symbol
        HttpServletRequest h = new HttpServletRequest() {
                                   ^
  symbol:   class HttpServletRequest
  location: class CodeSnippets
dataset9/src/main/java/CodeSnippets.java:425: error: cannot find symbol
    private static final Logger fLogger = Util.getLogger(CodeSnippets.class);
                                          ^
  symbol:   variable Util
  location: class CodeSnippets
dataset9/src/main/java/CodeSnippets.java:438: error: cannot find symbol
    TroubleTicket troubleTicket = new TroubleTicket(ex, aRequest);
    ^
  symbol:   class TroubleTicket
  location: class CodeSnippets
dataset9/src/main/java/CodeSnippets.java:438: error: cannot find symbol
    TroubleTicket troubleTicket = new TroubleTicket(ex, aRequest);
                                      ^
  symbol:   class TroubleTicket
  location: class CodeSnippets
dataset9/src/main/java/CodeSnippets.java:460: error: cannot find symbol
    TroubleTicket troubleTicket = new TroubleTicket(ex, aRequest);
    ^
  symbol:   class TroubleTicket
  location: class CodeSnippets
dataset9/src/main/java/CodeSnippets.java:460: error: cannot find symbol
    TroubleTicket troubleTicket = new TroubleTicket(ex, aRequest);
                                      ^
  symbol:   class TroubleTicket
  location: class CodeSnippets
dataset9/src/main/java/CodeSnippets.java:480: error: cannot find symbol
    TroubleTicket troubleTicket = new TroubleTicket(ex, aRequest);
    ^
  symbol:   class TroubleTicket
  location: class CodeSnippets
dataset9/src/main/java/CodeSnippets.java:480: error: cannot find symbol
    TroubleTicket troubleTicket = new TroubleTicket(ex, aRequest);
                                      ^
  symbol:   class TroubleTicket
  location: class CodeSnippets
dataset9/src/main/java/CodeSnippets.java:499: error: cannot find symbol
    TroubleTicket troubleTicket = new TroubleTicket(ex, aRequest);
    ^
  symbol:   class TroubleTicket
  location: class CodeSnippets
dataset9/src/main/java/CodeSnippets.java:499: error: cannot find symbol
    TroubleTicket troubleTicket = new TroubleTicket(ex, aRequest);
                                      ^
  symbol:   class TroubleTicket
  location: class CodeSnippets
dataset9/src/main/java/CodeSnippets.java:507: error: cannot find symbol
    HttpSession session = aRequest.getSession();
    ^
  symbol:   class HttpSession
  location: class CodeSnippets
dataset9/src/main/java/CodeSnippets.java:508: error: cannot find symbol
    ServletContext context = session.getServletContext();
    ^
  symbol:   class ServletContext
  location: class CodeSnippets
dataset9/src/main/java/CodeSnippets.java:522: error: cannot find symbol
    TroubleTicket troubleTicket = new TroubleTicket(ex, aRequest);
    ^
  symbol:   class TroubleTicket
  location: class CodeSnippets
dataset9/src/main/java/CodeSnippets.java:522: error: cannot find symbol
    TroubleTicket troubleTicket = new TroubleTicket(ex, aRequest);
                                      ^
  symbol:   class TroubleTicket
  location: class CodeSnippets
dataset9/src/main/java/CodeSnippets.java:530: error: cannot find symbol
    HttpSession session = aRequest.getSession();
    ^
  symbol:   class HttpSession
  location: class CodeSnippets
dataset9/src/main/java/CodeSnippets.java:531: error: cannot find symbol
    ServletContext context = session.getServletContext();
    ^
  symbol:   class ServletContext
  location: class CodeSnippets
dataset9/src/main/java/CodeSnippets.java:544: error: cannot find symbol
    TroubleTicket troubleTicket = new TroubleTicket(ex, aRequest);
    ^
  symbol:   class TroubleTicket
  location: class CodeSnippets
dataset9/src/main/java/CodeSnippets.java:544: error: cannot find symbol
    TroubleTicket troubleTicket = new TroubleTicket(ex, aRequest);
                                      ^
  symbol:   class TroubleTicket
  location: class CodeSnippets
dataset9/src/main/java/CodeSnippets.java:549: error: cannot find symbol
    HttpSession session = aRequest.getSession();
    ^
  symbol:   class HttpSession
  location: class CodeSnippets
dataset9/src/main/java/CodeSnippets.java:550: error: cannot find symbol
    ServletContext context = session.getServletContext();
    ^
  symbol:   class ServletContext
  location: class CodeSnippets
dataset9/src/main/java/CodeSnippets.java:31: warning: type.checking.not.run
public class CodeSnippets {
       ^
43 errors
1 warning
